[New Devhub Landing] Fix spacing in navigation. (#4241)

--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -12,7 +12,7 @@
     width: 100%;
 
     li {
-      margin: 10px 20px;
+      margin: 10px;
 
       &:first-child {
         margin: 0 auto 0 0;
